assets/style/main.scss
@import 'variables.scss';
@import 'auth.scss';

// Help classes
.d-none {
  display: none !important;
}

.hidden {
  opacity: 0 !important;
}

.d-block {
  display: block !important;
}

.d-flex {
  display: flex !important;
}

// Bulma styles reset
.custom-input {
  @extend .input;
  padding-right: 1rem !important;
  padding-left: 1rem !important;
  border-radius: 0 !important;
  background-color: #171717 !important;
  box-shadow: none !important;
  border: none;
  color: $white;

  &::placeholder {
    color: $middlegray;
  }
}

.custom-textarea {
  @extend .textarea;
  padding: 1rem !important;
  border-radius: 0 !important;
  background-color: #171717 !important;
  box-shadow: none !important;
  border: none;
  color: $white;

  &::placeholder {
    color: $middlegray;
  }
}

.custom-select {
  @extend .select;

  select {
    width: 300px;
    background-color: #171717 !important;
    box-shadow: none !important;
    border: none;
    color: $white;
    border-radius: 0;
  }

  &::after {
    border-color: $red !important;
  }

  &::placeholder {
    color: $middlegray;
  }
}

.custom-file-cta {
  @extend .file-cta;

  transition: 0.3s;
  border: 1px solid $red;
  border-radius: 0 !important;
  box-shadow: none !important;
  background-color: $red !important;

  &:hover {
    background-color: $red !important;
  }

  .file-label {
    color: #ffffff;
  }
}

.label {
  color: $white !important;
  font-weight: 400;
}

.image {
  img {
    object-fit: cover;
  }
}

.title,
.subtitle {
  text-align: left;
}

.button {
  transition: 0.3s;
  border: 1px solid $red;
  border-radius: 0 !important;
  box-shadow: none !important;

  &:hover {
    background-color: $red !important;
  }

  &_red {
    background-color: $red !important;
    border: 1px solid $red;

    &:hover {
      background-color: transparent !important;
    }
  }
}

.card {
  .card-content {
    background-color: #171717 !important;

    .subtitle {
      margin: 0;
    }

    &__main-title {
      margin-top: 1rem !important;
    }

    &__part {
      margin: 1rem 0 1rem 0;
      display: flex;
      flex-direction: column;

      &_name {
        margin-bottom: 0 !important;
        color: #47484e !important;
      }
    }

    &__buttons {
      &_header {
        .button {
          width: 100%;
        }
      }

      &_create {
        width: 100%;
      }
      margin: 1.5rem 0 0 0;
    }

    &__header {
      .subtitle {
        margin-bottom: 0 !important;
        @include vertical-center;

        &:hover {
          color: $red;

          [class^='icon__'],
          [class*=' icon__'] {
            color: $red;
          }
        }
      }
      @include horizontal-between;

      [class^='icon__'],
      [class*=' icon__'] {
        font-size: 1rem;
        padding: 0.5rem 0.5rem 0.5rem 0;
        color: $white;
      }
    }
  }
}

hr {
  margin: 0.5rem 0 0.5rem 0 !important;
  border: 1px solid #262626 !important;
  opacity: 0.8;
}

//Global styles

html,
body {
  background-color: #000000;
  font-family: 'Blender Pro';
  font-weight: 500;
  font-style: normal;
}

.main {
  padding-top: 170px;
}

.custom-icon {
  margin: 0 0.5rem;
}

.main-title {
  margin-bottom: 1.5rem;
  position: relative;

  .title {
    &::before {
      content: '';
      display: inline-block;
      width: 0.3rem;
      height: 2.5rem;
      background-color: $red;
      vertical-align: middle;
      margin: 0 1rem 0.3rem 0;
    }
  }
}

[class^='icon__'],
[class*=' icon__'] {
  font-size: 1rem;
  padding: 0.5rem;
  color: $white;
  transition: 0.3s;
}

.error {
  &__subtitle {
    font-weight: 400;
    display: inline-block;
    margin-top: 0.5rem;
    color: $red !important;

    &_form {
      margin-top: 1rem;
      margin-bottom: 0.75rem !important;
      width: 100%;
      box-shadow: none;
    }
  }
}

.done {
  &__subtitle {
    font-weight: 400;
    display: inline-block;
    margin-top: 0.5rem;
    color: $green !important;
  }

  &_form {
    margin-top: 1rem;
    margin-bottom: 0.75rem !important;
    width: 100%;
    box-shadow: none;
  }
}

// Text colors

.red {
  color: $red !important;
}

.gray {
  color: $gray !important;
}

.green {
  color: $green !important;
}

.middlegray {
  color: $middlegray !important;
}

@media screen and (max-width: 768px) {
  .main {
    padding-top: 80px;
  }
}

// Nuxt animation

.page-enter-active,
.page-leave-active {
  transition-property: opacity;
  transition-timing-function: ease-in-out;
  transition-duration: 500ms;
}
.page-enter,
.page-leave-to {
  opacity: 0;
}

.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.3s;
}
.fade-enter,
.fade-leave-to {
  opacity: 0;
}

.radio-container {
  display: block;
  color: white;
  position: relative;
  padding-left: 35px;
  cursor: pointer;
  font-size: 22px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.radio-container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.radiomark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  border-radius: 50%;
  background-color: white;
}

.radio-container:hover input ~ .radiomark {
  background-color: rgb(196, 196, 196);
}

.radio-container input:checked ~ .radiomark {
  background-color: #e22028;
}

.radio-container input:disabled ~ .radiomark {
  background-color: #47484e;
}

.radiomark:after {
  content: '';
  position: absolute;
  display: none;
}

.radio-container input:checked ~ .radiomark:after {
  display: block;
}

.radio-container .radiomark:after {
  left: 10px;
  top: 7px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

